--- a/index.html
+++ b/index.html
@@ -60,9 +60,11 @@
 			<label>ヘッドID</label><input type="text" placeholder="ヘッドIDを入力">
 			<button class="submit">検索</button>
 		</form>
-		<div class="soundcheck no_repeat t_center">
+<!-- 		<div class="soundcheck no_repeat t_center"> -->
+		<button class="soundcheck no_repeat t_center">
 			音量確認ボタン
-		</div>
+		</button>
+<!-- 		</div> -->
 		<div class="image">
 			<img src="img/port/img_shimizu.png" alt="清水港イメージ">
 		</div>
