--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
 	if ((navigator.userAgent.indexOf('iPhone') > 0) || navigator.userAgent.indexOf('iPod') > 0 || navigator.userAgent.indexOf('Android') > 0) {
 			document.write('<meta name="viewport" content="width=device-width, maximum-scale=1, user-scalable=no">');
 	}
+
+	const audio = new Audio('pya3_trimmer.mp3');
+	function playAudio(duration) {
+	  audio.currentTime = 0;
+	  audio.play();
+	  setTimeout(() => {
+	    audio.pause();
+	    if (duration > 0) {
+	      playAudio(duration - audio.duration);
+	    }
+	  }, audio.duration * 1000);
+	}
 </script>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
@@ -60,7 +72,7 @@
 			<label>ヘッドID</label><input type="text" placeholder="ヘッドIDを入力">
 			<button class="submit">検索</button>
 		</form>
-		<div class="soundcheck no_repeat t_center">
+		<div class="soundcheck no_repeat t_center" onclick="playAudio(10)" >
 			音量確認ボタン
 		</div>
 		<div class="image">
