--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			document.write('<meta name="viewport" content="width=device-width, maximum-scale=1, user-scalable=no">');
 	}
 
-	const audio = new Audio('pya3_trimmer.mp3');
+	const audio = new Audio('pya3.mp3');
 	function playAudio(duration) {
 	  audio.currentTime = 0;
 	  audio.play();
